--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,29 @@
-# Site settings
-title: Stephen E Lane
-email: ""
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://www.stephenelane.com" # the base hostname & protocol for your site
-twitter_username: stephenelane
-github_username:  SteveLane
+# Dependencies
+markdown:         kramdown
+highlighter:      pygments
 
-# Build settings
-markdown: kramdown
-safe: true
+# Permalinks
+permalink:        /:title
+relative_permalinks: true
+
+# Setup
+title:            "Stephen E Lane"
+tagline:          "Thoughts etc."
+description:      "Couldn't think of anything witty to write &#12483"
+url:              http://www.stephenelane.com
+baseurl:          /
+
+author:
+  name:           "Stephen Lane"
+  url:            https://twitter.com/stephenelane
+
+paginate:         5
+
+# Custom vars
+version:          2.1.0
+
+github:
+  repo:           https://github.com/SteveLane
+
+twitter_username: stephenelane
+github_username: SteveLane
