--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown:         kramdown
 highlighter:      pygments
 
 # Permalinks
-permalink:        /:title
+permalink:        /:year/:month/:title
 relative_permalinks: true
 
 # Setup
