Updates to styling
Stuffing around with some of the styling. Moving pagination links to
better position by creating an includes file.

--- a/_config.yml
+++ b/_config.yml
@@ -20,4 +20,4 @@ paginate_path: "/blog/page:num"
 gems: [jekyll-paginate]
 
 # Permalinks
-permalink:        /:year/:month/:title
+permalink:        /blog/:year/:month/:title
