--- a/_config.yml
+++ b/_config.yml
@@ -21,4 +21,4 @@ paginate_path: "/blog/page:num"
 gems: [jekyll-paginate]
 
 # Permalinks
-permalink:        /blog/:year/:month/:title
+permalink:        /blog/:year/:month/:day/:title
