change to https

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ name : Stephen E Lane
 brand : Stephen E Lane
 description : Couldn't think of anything witty to write &#12483
 keyword : 
-url:              http://SteveLane.github.io
+url:              https://SteveLane.github.io
 baseurl:          /
 # email : 
 twitter : stephenelane
